--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-ortools
-pandas
-openpyxl
-streamlit
-numpy
+# Core dependencies
+ortools>=9.7.0
+pandas>=2.0.0
+openpyxl>=3.1.0
+streamlit>=1.28.0
+numpy>=1.24.0
